# distfft

./: CMakeLists.txt  LICENSE  Makefile.am  aclocal.m4  config.h.in  configure.ac  fbuildroot.py  fft_par.c  fft_par.h  fft_par_bench_2d.c  fft_ser.c  fft_ser.h  ssfllg.c  ssfllg.h
dSFMT/: CMakeLists.txt  Makefile.am  compare_output.sh.in  config.h.in  dSFMT.11213.out.txt  dSFMT.1279.out.txt  dSFMT.132049.out.txt  dSFMT.19937.out.txt  dSFMT.216091.out.txt  dSFMT.2203.out.txt  dSFMT.4253.out.txt  dSFMT.44497.out.txt  dSFMT.521.out.txt  dSFMT.86243.out.txt  dSFMT.h  test.c
doc/: fft_par.tex  fftw.bib  fourier.bib  magnetics.bib
par_tests/: Makefile.am  fft_par_1d.c  fft_par_2d.c
tests/: CMakeLists.txt  Makefile.am  fft_par_1d.c  fft_par_2d.c  fft_par_bench_2d.c  fft_par_rev_1d.c  fft_par_rev_2d.c  fft_par_revvec_2d.c  fft_par_vec_1d.c  fft_par_vec_2d.c  fft_r2c_finish.c  fft_r2c_finish_1d.c  fft_r2c_finish_1d_vec.c  fft_r2c_finish_2d.c  fft_r2c_finish_2d_vec.c  fft_r2c_finish_nd.c  fft_r2c_finish_nd_vec.c
